infra/modules/network/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block       = "10.0.0.0/16"
  enable_dns_hostnames = true

  tags = {
    Name = "main-vpc"
    Environment = "dev"
  }
}
